--- a/index.html
+++ b/index.html
@@ -3,9 +3,9 @@ layout: default
 ---
 <section class="constrain hero">
     <p>This is a sample page to demonstrate how <a href="https://staticman.net">Staticman</a> can be used to integrate user-generated content into a static site. 
-    When a the form is submitted, the data is sent to the Staticman API via Ajax, which will push it to <a href="https://github.com/eduardoboucas/popcorn">the GitHub repository</a> and cause a regeneration of the Jekyll site.</p>
-    <h6>You can fork this repository and use it as a starting point to create your own Staticman integration.</h6>
-  </section>
+    When the form is submitted, the data is sent to the Staticman API via Ajax, which will push it to <a href="https://github.com/ValentinMarcon/staticman_test">the GitHub repository</a> and cause a regeneration of the Jekyll site.</p>
+    <p>This staticman config is based on  <a href="https://github.com/eduardoboucas/popcorn">popcorn demo</a>, following the <a href="https://staticman.net/docs/">staticman doc</a>, but as staticman bot is broken we use the <a href="https://github.com/apps/staticman-net">static man app</a> currently <a href="https://github.com/eduardoboucas/staticman/issues/243#issuecomment-453754860">under devlopment</a></p>
+</section>
  
   <section class="constrain">
     <h3>Enter a new tool in bio.tools</h3>
@@ -14,7 +14,6 @@ layout: default
   
   <section class="constrain">
     <h3>All bio.tools</h3>
-
     {% include tools.html %}
   </section>
 </div>
