change biotoolsid and homepage

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@ layout: default
   </section>
   
   <section class="constrain">
-    <h3>Last 3 bio.tools entry<</h3>
+    <h3>Last 3 bio.tools entry</h3>
     {% include tools.html %}
   </section>
 </div>
